--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <div>
         <h1><b>Github Blocks</b></h1 >
     </div>
-    <div id="blue"><img src="./assets/blacktocats.png" alt="">
-        <img src="./assets/puddlc.jpeg" alt="">
-                   <img src="./assets/filmtocats.png" alt="">
+    <div id="blue"><img src="./img/blacktocats.png" alt="">
+        <img src="./img/" alt="">
+                   <img src="./img/filmtocats.png" alt="">
                     
                     </div>
-    <div id="pink"><img src="./assets/mcefeeline.jpeg" alt="">
+    <div id="pink"><img src="./img/mcefeeline.jpeg" alt="">
                     
-                    <img src="./assets/justicetocat.jpeg" alt="">
+                    <img src="./img/justicetocat.jpeg" alt="">
                     </div>
-    <div id="white"><img src="./assets/umper.jpeg" alt="">
-                    <img src="./assets/yogitocat.png" alt="">
-                    <img src="./assets/octodex.gif" alt="">
+    <div id="white"><img src="./img/umper.jpeg" alt="">
+                    <img src="./img/yogitocat.png" alt="">
+                    <img src="./img/octodex.gif" alt="">
                     </div>
     <div id="ref">
         <p>Images from <a href="https://octodex.github.com">Github octodex</a></p>
